--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "piped-promises",
   "description": "Library with different patters for promises like sequencial & parallel with maximum parallel execution arguments execution",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover -x \"**/spec/**\" ./node_modules/.bin/jasmine"
+    "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover -x \"**/spec/**\" ./node_modules/.bin/jasmine",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/DavidBM/piped-promises",
   "devDependencies": {
+    "coveralls": "^2.13.1",
     "istanbul": "^0.4.5",
     "jasmine": "^2.6.0"
   }
