--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "piped-promises",
   "description": "Library with different patters for promises like sequencial & parallel with maximum parallel execution arguments execution",
-  "version": "1.0.3",
-  "main": "index.js",
+  "version": "2.0.0",
+  "main": "lib/iterate.js",
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover -x \"**/spec/**\" ./node_modules/.bin/jasmine",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
