--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "piped-promises",
-  "description": "Library with different patters for promises like sequencial & parallel with maximum parallel execution arguments execution",
-  "version": "1.0.7",
+  "description": "(deprecated: use iterated-pipes instead) Library with different patters for promises like sequencial & parallel with maximum parallel execution arguments execution",
+  "version": "1.0.8",
   "main": "lib/lib.js",
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover -x \"**/spec/**\" ./node_modules/.bin/jasmine",
